# NP-Cassifier

./: .gitignore  README.md  pyproject.toml  run_extra_trees.py  run_random_forest.py
src/: mol_to_fp.py  prepare_data.py  run.py  utils.py
src/models/: lightgbm.py
tests/: test_run.py
