[tool.poetry]
name = "np-classifier"
version = "0.1.0"
description = ""
authors = ["Marco Visani <92217074+mvisani@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
openpyxl = "^3.1.2"
transformers = "^4.39.0"
hyperopt = "^0.2.7"
dict-hash = "^1.1.36"
compress-pickle = "^2.1.0"
lightgbm = "^4.3.0"
bayesian-optimization = "^1.4.3"
rdkit = "^2023.9.5"
setuptools = "^69.2.0"
polars = "^0.20.16"
cache-decorator = "^2.2.0"
deflate-dict = "^1.0.11"
map4 = {git = "https://github.com/reymond-group/map4", rev = "v1.0"}
jupyterlab = "^4.1.5"
pytest = "^8.1.1"
hpsklearn = {git = "https://github.com/hyperopt/hyperopt-sklearn"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
